<?xml version="1.0"?>
<package>
  <name>map_world_convert</name>
  <version>0.0.0</version>
  <description>The map_world_convert package</description>

  <maintainer email="songjinxs@163.com">Linxu Fang</maintainer>

  <license>BSD</license>


  <author email="songjinxs@163.com">Linxu Fang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <run_depend>geometry_msgs</run_depend>



  <export>
  </export>

</package>
