<?xml version="1.0"?>
<package>
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xiaopeng@todo.todo">shhu1993</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/path_planning</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_mapping</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_mapping</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
